# mirumon-backend-legacy

./: .dockerignore  .editorconfig  .env.example  .env.template  .gitignore  Dockerfile  Dockerfile.lint  LICENSE  README.md  alembic.ini  docker-compose.yml  example.env  fake_device.py  noxfile.py  openapi.json  pyproject.toml  receive.py  setup.cfg  todo.md
.github/workflows/: ci.yml  deploy.yml
app/: config.py  endpoints.py  logging.py  main.py  manager.py  managers.py  services.py  versions.py
app/api/: asgi.py  routes.py  websockets.py
app/api/dependencies/: authentication.py  clients.py  connections.py  database.py  managers.py  repositories.py  rest_api.py  services.py  settings.py  state.py  user_auth.py  websockets.py
app/api/dependencies/devices/: connections.py  services.py
app/api/dependencies/users/: permissions.py  services.py
app/api/endpoints/: devices.py  users.py  websockets.py
app/api/endpoints/devices/: auth.py  execute.py  info.py  list.py  rest.py  ws.py
app/api/endpoints/http/: users.py
app/api/models/: base.py  device_auth.py
app/api/models/http/: base.py  device_auth.py  (+1 more)
app/api/routes/: api.py  websockets.py
app/common/: config.py  events.py  strings.py  versions.py
app/components/: config.py  core.py  database.py  events.py  jwt.py  logger.py  version.py
app/database/: models.py
app/database/migrations/: env.py  script.py.mako
app/database/models/: base.py
app/database/repositories/: base_repo.py  devices_repo.py  events_repo.py  users_repo.py
app/db/: events.py
app/db/migrations/: env.py
app/db/repositories/: computers.py  devices.py  events.py  groups.py  users.py
app/domain/: base.py  mixins.py  scopes.py  types.py
app/domain/core/: enum.py  model.py  repo.py
app/domain/device/: auth.py  base.py  detail.py  typing.py
app/domain/devices/: device.py
app/domain/event/: base.py  rest.py  types.py  typing.py  ws.py
app/domain/events/: base.py  rest.py  ws.py
app/domain/group/: group.py
app/domain/user/: jwt.py  scopes.py  use_cases.py  user.py  users.py
app/domain/users/: scopes.py  user.py
app/endpoints/: websockets.py
app/endpoints/api/: computers.py
app/models/domain/: devices.py  groups.py  scopes.py  types.py  users.py
app/models/schemas/: base.py  groups.py  jwt.py  users.py
app/resources/: strings.py
app/schemas/: events.py  events_enum.py  overview.py  registration.py  status_enum.py  statuses.py
app/schemas/computers/: details.py  hardware.py  overview.py  registration.py
app/schemas/events/: base.py  connection.py  rest.py  ws.py
app/services/: authentication.py  clients.py  clients_manager.py  computers.py  devices.py  devices_service.py  event_handlers.py  events.py  events_manager.py  events_service.py  jwt.py
app/services/authentication/: base_auth_service.py
app/services/devices/: auth_service.py  client.py  devices_service.py  events_service.py  gateway.py
app/services/users/: auth_service.py  authentication.py  jwt.py  users_service.py
app/settings/: config.py
app/settings/components/: connections.py  core.py  database.py  jwt.py  logger.py  logging.py  rabbit.py  redis.py  server_events.py  version.py
app/settings/environments/: base.py  config.py  development.py  production.py  testing.py
mirumon/: main.py
mirumon/api/: __init__.py  api_model.py  asgi.py  routers.py
mirumon/api/dependencies/: repositories.py  services.py
mirumon/api/devices/: devices_router.py
mirumon/api/users/: users_router.py
mirumon/application/: repo_protocol.py  repositories.py
mirumon/application/devices/: auth_service.py  client.py  device_broker_repo.py  device_repo.py  device_service.py  device_socket_manager.py  device_socket_repo.py  devices_broker_repo.py  devices_repo.py  devices_service.py  events_service.py  gateway.py
mirumon/application/events/: events_repo.py  events_service.py  models.py
mirumon/application/users/: auth_service.py  users_repo.py  users_service.py
mirumon/domain/: __init__.py
mirumon/domain/core/: entity.py  enums.py  event.py
mirumon/domain/devices/: entities.py
mirumon/domain/events/: device_detail.py  device_hardware.py  device_software.py
mirumon/domain/users/: entities.py  scopes.py
mirumon/infra/: __init__.py  errors.py  infra_model.py  repo_protocol.py
mirumon/infra/api/: asgi.py  routers.py
mirumon/infra/components/: connections.py  logging.py  server_events.py
mirumon/infra/devices/: device_repo_impl.py  devices_broker_repo_impl.py  devices_command_handler.py  devices_socket_repo_impl.py  repo.py
mirumon/infra/events/: events.py  events_repo_impl.py  repo.py
mirumon/infra/users/: users_repo.py  users_repo_impl.py
mirumon/resources/: strings.py
mirumon/settings/: config.py
mirumon/settings/environments/: app.py  base.py  development.py  production.py  testing.py
scripts/: check-container-version  create_superuser.py  fake_device.py  format  lint  lint-code  lint-style  run_fake_device.py  runserver  test  test-cov-xml
scripts/powershell/: format.ps1  lint-code.ps1  lint-style.ps1  lint.ps1  test-cov-html.ps1  test-cov-xml.ps1  test.ps1
tests/: conftest.py  test_server.py  test_versions.py  testing_helpers.py
tests/integration/: conftest.py
tests/integration/support/: fake_device.py
tests/plugins/: docker.py  options.py  printer.py  typing.py
tests/services/: postgres.py  redis.py
tests/test_api/: test_device_details.py  test_device_registration.py
tests/test_api/test_endpoints/: test_devices.py  test_websockets.py
tests/test_common/: test_versions.py
tests/test_integration/: conftest.py  support.py
tests/test_integration/support/: fake_device.py  fake_pool.py  jwt.py
tests/test_rest_api/: test_device_details.py  test_device_details_event.py  test_device_errors.py  test_events_protocol_errors.py
tests/test_services/: test_versions.py
tests/test_websockets/: test_device_errors.py  test_device_registration.py  test_events_api.py  test_events_protocol_errors.py  test_websocket_api.py
tests/testing_helpers/: test_pools.py  websocket_handlers.py  websocket_processing_tools.py
(+179 files in other folders)
