[tool.poetry]
name = "mirumon-backend"
version = "0.0.10"
description = "Monitoring server"
authors = [
    "Slyfoxy <khitrov34@gmail.com>",
    "Nik Sidnev <snive2013@yandex.ru>"
]
license = "MIT"
packages = [
    { include = "app" }
]


[tool.poetry.dependencies]
python = "^3.8"

# web server
fastapi = "^0.54.1"
uvicorn = "^0.11.5"
gunicorn = "^20.0.4"

# serializers
pydantic = {extras = ["dotenv"], version = "^1.5.1"}
python-multipart = "^0.0.5"

# encryption
passlib = {version = "^1.7", extras = ["bcrypt"]}
pyjwt = "^1.7"

# logs
loguru = "^0.4.1"

# storage
alembic = "^1.3"
databases = {version = "^0.2.6", extras = ["postgresql"]}
asyncpg = "^0.20.0"
pytest-deadfixtures = "^2.2.0"
aioredis = "^1.3.1"
aio-pika = "^6.6.1"


[tool.poetry.dev-dependencies]
# tasks
nox = "^2019.11.9"

# formatters
black = "^19.10b0"
isort = "^4.3"
autoflake = "^1.3"
add-trailing-comma = "^2.0.1"

# linters
mypy = "^0.770"
wemake-python-styleguide = "^0.14"
flake8-pytest-style = "^1.1.1"

# tests
pytest = "^5.4.2"
pytest-asyncio = "^0.12.0"
pytest-cov = "^2.8.1"
pytest-xdist = "^1.30"
pytest-env = "^0.6.2"

# friendly logs
pytest-it = "^0.1.4"
pytest-clarity = "^0.3.0-alpha.0"

# test client for http & websockets
async-asgi-testclient = "^1.4.4"

# services
docker = "^4.0"

# jobs retry
tenacity = "^6.2.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
