[tool.poetry]
name = "mirumon-backend"
version = "0.1.0"
description = "Monitoring server"
authors = [
    "Nick Khitrov <khitrov34@gmail.com>",
    "Nik Sidnev <sidnev.nick@gmail.com>"
]
license = "MIT"
packages = [{ include = "mirumon" }]

[tool.poetry.dependencies]
python = "^3.8"
# web server
# TODO: update after this pr https://github.com/tiangolo/fastapi/pull/2520
fastapi = { git = "https://github.com/Slyfoxy/fastapi.git", branch = "fix/ws-router-prefix" }
uvicorn = { version = "^0.13.1", extras = ["standart"] }
# serializers
pydantic = { version = "^1.6.0", extras = ["dotenv"] }
python-multipart = "^0.0.5"
# encryption
passlib = { version = "^1.7", extras = ["bcrypt"] }
python-jose = "^3.2.0"
# logs
loguru = "^0.5.3"
# storage
alembic = "^1.3"
databases = { version = "^0.2.6", extras = ["postgresql"] }
asyncpg = "^0.20.0"
aio-pika = "^6.6.1"
async-timeout = "^3.0.1"
uvloop = "^0.14.0"
httptools = "^0.1.1"
websockets = "^8.1"
pytest-randomly = "^3.5.0"

[tool.poetry.dev-dependencies]
# tasks
nox = "^2019.11.9"
# formatters
black = "^20.8b1"
isort = "^5.0"
autoflake = "^1.3"
add-trailing-comma = "^2.0.1"
# linters
mypy = "^0.770"
wemake-python-styleguide = { git = "https://github.com/wemake-services/wemake-python-styleguide", rev = "dffa5cb" }
flake8-pytest-style = "^1.1.1"
# tests
pytest = "^6.1.1"
pytest-asyncio = "^0.12.0"
pytest-cov = "^2.8.1"
pytest-xdist = "^1.30"
pytest-env = "^0.6.2"
pytest-deadfixtures = "^2.2.0"
# friendly logs
pytest-it = "^0.1.4"
pytest-clarity = "^0.3.0-alpha.0"
# test client for http & websockets
async-asgi-testclient = "^1.4.4"
# services
docker = "^4.0"
# jobs retry
tenacity = "^6.2.0"
requests = "^2.24.0"
websockets = "^8.1"

[tool.isort]
profile = "black"
src_paths = ["mirumon", "tests"]
combine_as_imports = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
testpaths = "tests"
# Directories that are not visited by pytest collector:
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__"
]
python_files = [
    # tests declarations
    "test_*.py",
    # base test scenarios and helpers for tests
    "support.py"
]
# https://docs.pytest.org/en/2.8.7/usage.html#modifying-python-traceback-printing
addopts = [
    "--failed-first",
    "--strict"
]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
filterwarnings = ["error", "ignore::DeprecationWarning"]
# Pytest plugins:
env = [
    # Set application runtime environment for testing
    "APP_ENV=test",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
