[tool.poetry]
name = "mirumon-backend"
version = "0.1.0"
description = "Monitoring server"
authors = [
    "Nick Khitrov <khitrov34@gmail.com>",
    "Nik Sidnev <sidnev.nick@gmail.com>"
]
license = "MIT"
packages = [{ include = "mirumon" }]

[tool.poetry.dependencies]
python = "^3.9"
# web server
fastapi = { version="^0.63.0"}
uvicorn = { version = "^0.13.1", extras = ["standart"] }
# serializers
pydantic = { version = "^1.6.0", extras = ["dotenv"] }
python-multipart = "^0.0.5"
# encryption
passlib = { version = "^1.7", extras = ["bcrypt"] }
python-jose = "^3.2.0"
# logs
loguru = "^0.5.3"
# storage
alembic = "^1.3"
databases = { version = "0.4.0", extras = ["postgresql"] }
asyncpg = "^0.22.0"
aio-pika = "^6.8.0"
async-timeout = "^3.0.1"
uvloop = "^0.15.0"
httptools = "^0.1.1"
websockets = "^8.1"
aiojobs = "^0.3.0"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]
# tasks
nox = "^2020.12.31"
# formatters
black = "^20.8b1"
isort = "^5.0"
autoflake = "^1.3"
add-trailing-comma = "^2.0.1"
# linters
mypy = "^0.800"
wemake-python-styleguide = "0.15.0"
flake8-pytest-style = "^1.1.1"
# tests
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.8.1"
pytest-env = "^0.6.2"
pytest-deadfixtures = "^2.2.0"
pytest-randomly = "^3.5.0"
# friendly logs
pytest-it = "^0.1.4"
pytest-clarity = "^0.3.0-alpha.0"
# test client for http & websockets
async-asgi-testclient = "^1.4.4"
requests = "^2.24.0"
# services
docker = "^4.0"
# jobs retry
tenacity = "^6.2.0"

[tool.isort]
profile = "black"
src_paths = ["mirumon", "tests"]
combine_as_imports = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
testpaths = "tests"
# Directories that are not visited by pytest collector:
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__"
]
python_files = [
    # tests declarations
    "test_*.py",
    # base test scenarios and helpers for tests
    "support.py"
]
# https://docs.pytest.org/en/2.8.7/usage.html#modifying-python-traceback-printing
addopts = [
    "--failed-first",
    "--strict"
]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
filterwarnings = ["error", "ignore::DeprecationWarning", "ignore::cryptography.utils.CryptographyDeprecationWarning"]
# Pytest plugins:
env = [
    # Set application runtime environment for testing
    "APP_ENV=test",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
